force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <label>Card</label>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>