force-app/main/default/objects/Card__c/fields/ReactivationCardEmailSendDate__c.field-meta.xml
<CustomField>
    <fullName>ReactivationCardEmailSendDate__c</fullName>
    <label>Reactivation Card Email Send Date</label>
    <type>Date</type>
</CustomField>