force-app/main/default/objects/Card__c/fields/Staging__c.field-meta.xml
<CustomField>
    <fullName>Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging</label>
    <referenceTo>DonationStaging__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>