force-app/main/default/objects/Card__c/fields/ValidThru__c.field-meta.xml
<CustomField>
    <fullName>ValidThru__c</fullName>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>